// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.deleteOfficialResponse GraphQL client delete an officialResponse 1`] = `
Object {
  "deleteOfficialResponse": Object {
    "error": null,
    "id": "T2ZmaWNpYWxSZXNwb25zZTpvZmZpY2lhbFJlc3BvbnNlMTE=",
  },
}
`;

exports[`mutations.deleteOfficialResponse GraphQL client wants to delete an officialResponse but wrong id 1`] = `
Object {
  "deleteOfficialResponse": Object {
    "error": "ID_NOT_FOUND",
    "id": null,
  },
}
`;
